--- a/MASReportTool/MainWindow.xaml
+++ b/MASReportTool/MainWindow.xaml
@@ -28,6 +28,8 @@
                 </Trigger>
             </Style.Triggers>
         </Style>
+        <local:IsSavedColorConverter x:Key="IsSavedColorConverter" />
+        <local:ResultStringBoolConverter x:Key="ResultStringBoolConverter" />
         <local:ResultStringConverter x:Key="ResultStringConverter" />
         <local:VisibilityBoolConverter x:Key="VisibilityBoolConverter" />
     </Window.Resources>
@@ -72,22 +74,26 @@
             </Grid.Resources>
             <Button BorderThickness="2"
                     BorderBrush="White"
+                    Background="{Binding IsSaved, Mode=OneWay, Converter={StaticResource IsSavedColorConverter}}"
                     Grid.Column="0"
                     Grid.Row="0"
                     Name="Btn_Save"
+                    ToolTip="儲存進度"
                     Click="Btn_Save_Click">
                 <Image Source="/assets/pics/icon_save.png"/>
             </Button>
             <Button BorderThickness="2"
                     BorderBrush="White" 
                     Grid.Column="0"
-                    Grid.Row="1">
+                    Grid.Row="1"
+                    ToolTip="開新檔案">
                 <Image Source="/assets/pics/icon_new_file.png"/>
             </Button>
             <Button BorderThickness="2"
                     BorderBrush="White" 
                     Grid.Column="0"
-                    Grid.Row="2">
+                    Grid.Row="2"
+                    ToolTip="輸出報告">
                 <Image Source="/assets/pics/icon_output.png"/>
             </Button>
         </Grid>
@@ -233,6 +239,8 @@
                                                  Grid.Row="1"
                                                  Margin="3"
                                                  Content="符合"
+                                                 GroupName="SubRuleResult"
+                                                 IsChecked="{Binding Result, Converter={StaticResource ResultStringBoolConverter}, ConverterParameter=accept}"
                                                  Style="{StaticResource DarkTheme}"
                                                  Background="White"
                                                  Tag="{Binding Content.SubRuleNumber}"
@@ -243,6 +251,8 @@
                                                  Grid.Row="1"
                                                  Margin="3"
                                                  Content="不符合"
+                                                 GroupName="SubRuleResult"
+                                                 IsChecked="{Binding Result, Converter={StaticResource ResultStringBoolConverter}, ConverterParameter=fail}"
                                                  Style="{StaticResource DarkTheme}"
                                                  Background="White"
                                                  Tag="{Binding Content.SubRuleNumber}"
