--- a/MASReportTool/MainWindow.xaml
+++ b/MASReportTool/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="MASReportTool.MainWindow"
+<Window x:Class="MASReportTool.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -275,7 +275,6 @@
                                                  Grid.Row="1"
                                                  Margin="3"
                                                  Content="符合"
-                                                 GroupName="SubRuleResult"
                                                  IsChecked="{Binding Result, Converter={StaticResource ResultStringBoolConverter}, ConverterParameter=accept}"
                                                  Style="{StaticResource DarkTheme}"
                                                  Background="White"
@@ -287,7 +286,6 @@
                                                  Grid.Row="1"
                                                  Margin="3"
                                                  Content="不符合"
-                                                 GroupName="SubRuleResult"
                                                  IsChecked="{Binding Result, Converter={StaticResource ResultStringBoolConverter}, ConverterParameter=fail}"
                                                  Style="{StaticResource DarkTheme}"
                                                  Background="White"
