--- a/MASReportTool/MainWindow.xaml
+++ b/MASReportTool/MainWindow.xaml
@@ -1,4 +1,4 @@
-<Window x:Class="MASReportTool.MainWindow"
+﻿<Window x:Class="MASReportTool.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -28,6 +28,7 @@
                 </Trigger>
             </Style.Triggers>
         </Style>
+        <local:ResultStringIconConverter x:Key="ResultStringIconConverter" />
         <local:ResultClassRadioBtnConverter x:Key="ResultClassRadioBtnConverter" />
         <local:IsSavedColorConverter x:Key="IsSavedColorConverter" />
         <local:ResultStringBoolConverter x:Key="ResultStringBoolConverter" />
@@ -148,13 +149,19 @@
                     <Style TargetType="TreeViewItem">
                         <Setter Property="IsExpanded" Value="True"/>
                         <Setter Property="Foreground" Value="Ivory"/>
+                        <Setter Property="HorizontalContentAlignment" Value="Left"/>
+                        <Setter Property="VerticalContentAlignment" Value="Center"/>
                     </Style>
                 </TreeView.ItemContainerStyle>
                 <TreeView.ItemTemplate>
                     <HierarchicalDataTemplate 
                             DataType="{x:Type local:TreeViewItems}" 
                             ItemsSource="{Binding Items}">
-                        <TextBlock Text="{Binding Title}"/>
+                        <WrapPanel>
+                            <TextBlock Text="{Binding Title}"/>
+                            <Image Source="{Binding RuleResult.FinalResult, Mode=OneWay, Converter={StaticResource ResultStringIconConverter}}"
+                                   MaxHeight="15"/>
+                        </WrapPanel>
                     </HierarchicalDataTemplate>
                 </TreeView.ItemTemplate>
             </TreeView>
