修正，圖片Caption沒有正常更新的bug

--- a/MASReportTool/MainWindow.xaml
+++ b/MASReportTool/MainWindow.xaml
@@ -580,7 +580,7 @@
                 <TextBox Grid.Row="1"
                          Margin="5"
                          Style="{StaticResource DarkTheme}"
-                         Text="{Binding CurrentSelectedPic.Caption, Mode=TwoWay}"/>
+                         Text="{Binding CurrentSelectedPic.Caption, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
 
             </Grid>
         </Grid>
