--- a/MASReportTool/MainWindow.xaml
+++ b/MASReportTool/MainWindow.xaml
@@ -143,15 +143,30 @@
                     <WrapPanel>
                         <Grid>
                             <Grid.RowDefinitions>
-                                <RowDefinition  MinHeight="10"/>
+                                <RowDefinition MinHeight="10" />
                             </Grid.RowDefinitions>
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition MinWidth="10"/>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition MinWidth="10" />
                             </Grid.ColumnDefinitions>
-                            <TextBlock Grid.Column="0" Text="{Binding Header}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0" UseLayoutRounding="True"/>
-                            <Button Grid.Column="1" FontWeight="Bold" VerticalAlignment="Center" HorizontalAlignment="Center" MinWidth="15" MinHeight="15" Margin="10,0,0,0" BorderThickness="0">×</Button>
+                            <TextBlock
+                                Grid.Column="0"
+                                Margin="0"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
                                 Text="{Binding Report.CurrentOpenedFile}"
+                                UseLayoutRounding="True" />
+                            <Button
+                                Grid.Column="1"
+                                MinWidth="15"
+                                MinHeight="15"
+                                Margin="10,0,0,0"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                BorderThickness="0"
+                                FontWeight="Bold">
+                                ×
+                            </Button>
                         </Grid>
                     </WrapPanel>
                 </DataTemplate>
