--- a/MASReportTool/MainWindow.xaml
+++ b/MASReportTool/MainWindow.xaml
@@ -155,7 +155,7 @@
                                 Margin="0"
                                 HorizontalAlignment="Center"
                                 VerticalAlignment="Center"
-                                Text="{Binding Report.CurrentOpenedFile, Converter={StaticResource CurrentOpenedFileToTabItemTextConverter}}"
+                                Text="{Binding Report, Converter={StaticResource CurrentOpenedFileToTabItemTextConverter}}"
                                 UseLayoutRounding="True" />
                             <Button
                                 Grid.Column="1"
